tests/negative/Test15.sp
(* Testing wrong refinement *)
abs:Int where abs > (val:Int)  ;
